Fix elements overlapping on mobile

--- a/src/less/documentation-swedbankpay.less
+++ b/src/less/documentation-swedbankpay.less
@@ -1304,10 +1304,17 @@
         }
     }
 
-    .accordion {
-        .accordion-body {
-            .example-accordion {
-                border: 2px dotted @light-brown;
+    #accordion-doc {
+        .slab-border-error,
+        .slab-border-success {
+            height: 27rem;
+        }
+
+        .accordion {
+            .accordion-body {
+                .example-accordion {
+                    border: 2px dotted @light-brown;
+                }
             }
         }
     }
